# libmpeg7

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README.txt  base.Dockerfile  build-all.sh  build-docker.sh  build.sh  docker-compose-dev.yml  docker-compose.yml  process_dataset.py
.github/workflows/: build.yml
java/: pom.xml
java/Test/: .classpath
java/Test/src/: TestClass.java
java/javampeg7pw/: .project
java/javampeg7pw/src/com/ztv/mpeg7/: libmpeg7pw.java
java/javampeg7pw/src/com/ztv/mpeg7/lib/: DescriptorType.java  LibraryException.java  javampeg7pw.java
java/src/main/java/com/mpeg7/: ClientMain.java  Main.java  ServerMain.java
java/src/main/java/com/mpeg7/bridge/: libmpeg7.java
java/src/main/java/com/mpeg7/lib/: DescriptorType.java  LibraryException.java  mpeg7.java
java/src/main/java/com/mpeg7/mpeg7/: libmpeg7.java
java/src/main/java/com/mpeg7/network/: BaseFrame.java  Command.java  OutgoingFrame.java  Packet.java  ReadingState.java  TcpIncomingFrame.java  Util.java
java/src/main/java/com/mpeg7/rose/: Action.java  Event.java  FloatingPointComparator.java  ObservableBase.java  Observer.java  SimpleEvent.java  Subscription.java  SubscriptionContainer.java
lib/: CMakeLists.txt  build.sh
lib/sources/: Mpeg7.cpp  Mpeg7.h
lib/sources/DESCRIPTORS/: Descriptor.h  DescriptorDistance.h  DescriptorExtractor.h
lib/sources/DESCRIPTORS/COLOR/CTBrowsing/: CTBrowsing.cpp  CTBrowsingDistance.cpp  CTBrowsingExtractor.cpp  CTBrowsingExtractor.h
lib/sources/DESCRIPTORS/COLOR/ColorLayout/: ColorLayout.cpp  ColorLayout.h  ColorLayoutDistance.cpp  ColorLayoutExtractor.cpp  ColorLayoutExtractor.h
lib/sources/DESCRIPTORS/COLOR/ColorStructure/: ColorStructure.cpp  ColorStructure.h  ColorStructureDistance.cpp  ColorStructureDistance.h  ColorStructureExtractor.cpp
lib/sources/DESCRIPTORS/COLOR/DominantColor/: DominantColor.cpp  DominantColorDistance.cpp  DominantColorExtractor.cpp
lib/sources/DESCRIPTORS/SHAPE/ContourShape/: ContourShape.h  ContourShapeDistance.h  ContourShapeExtractor.h
lib/sources/DESCRIPTORS/SHAPE/RegionShape/: RegionShape.cpp  RegionShape.h  RegionShapeDistance.cpp  RegionShapeExtractor.h
lib/sources/DESCRIPTORS/TEXTURE/EdgeHistogram/: EdgeHistogram.cpp  EdgeHistogram.h  EdgeHistogramExtractor.cpp
lib/sources/DESCRIPTORS/TEXTURE/HomogeneusTexture/: HomogeneousTextureDistance.h  HomogeneousTextureExtractor.cpp
lib/sources/DESCRIPTORS/TEXTURE/TextureBrowsing/: TextureBrowsingDistance.h  TextureBrowsingExtractor.cpp
lib/sources/JNI/: com_mpeg7_bridge_libmpeg7.cpp  com_mpeg7_bridge_libmpeg7.h
lib/sources/TOOLS/Image/: Image.cpp  Image.h
python/: install_pympeg7.sh  start_tests.sh
python/pympeg7/: pympeg7.py~  setup.py
python/tests/: CTBrowsingTest.py  ColorLayoutTest.py  ColorStructureTest.py  ContourShapeTest.py  DominantColorTest.py  EdgeHistogramTest.py  HomogeneousTextureTest.py  README.txt  RegionShapeTest.py  ScalableColorTest.py  TextureBrowsingTest.py  randomNetworkSearchScalableColor.py
python/tests/images/: texture1.pgm  texture2.pgm
python/tests/text_brows_tmp/: default_Column_00  default_Column_01  default_Column_02  default_Column_03  default_Column_04  default_Column_05  default_Column_10  default_Column_11  default_Column_12  default_Column_13  default_Column_14  default_Column_15  default_Column_20  default_Column_21  default_Column_22  default_Column_23  default_Column_24  default_Column_25  default_Column_30  default_Column_31  default_Column_32  default_Column_33  default_Column_34  default_Column_35  default_Row_00  default_Row_01  default_Row_02  default_Row_03  default_Row_04  default_Row_05  default_Row_10  default_Row_11  default_Row_12  default_Row_13  default_Row_14  default_Row_15  default_Row_20  default_Row_21  default_Row_22  default_Row_23  (+8 more)
scripts/: fire_up_build.sh
sources/: Mpeg7.cpp  Mpeg7.h  main.cpp
sources/DESCRIPTORS/: Descriptor.h  DescriptorDistance.h  DescriptorExtractor.h  DescriptorType.h
sources/DESCRIPTORS/COLOR/CTBrowsing/: CTBrowsing.cpp  CTBrowsing.h  CTBrowsingDistance.cpp  CTBrowsingDistance.h  CTBrowsingExtractor.cpp  CTBrowsingExtractor.h
sources/DESCRIPTORS/COLOR/ColorLayout/: ColorLayout.cpp  ColorLayout.h  ColorLayoutDistance.cpp  ColorLayoutDistance.h  ColorLayoutExtractor.cpp  ColorLayoutExtractor.h
sources/DESCRIPTORS/COLOR/ColorStructure/: ColorStructure.cpp  ColorStructure.h  ColorStructureDistance.cpp  ColorStructureDistance.h  ColorStructureExtractor.cpp  ColorStructureExtractor.h
sources/DESCRIPTORS/COLOR/DominantColor/: DominantColor.cpp  DominantColor.h  DominantColorDistance.cpp  DominantColorDistance.h  DominantColorExtractor.cpp  DominantColorExtractor.h
sources/DESCRIPTORS/COLOR/ScalableColor/: ScalableColor.cpp  ScalableColor.h  ScalableColorDistance.cpp  ScalableColorDistance.h  ScalableColorExtractor.cpp  ScalableColorExtractor.h
sources/DESCRIPTORS/SHAPE/ContourShape/: ContourShape.cpp  ContourShape.h  ContourShapeDistance.cpp  ContourShapeDistance.h  ContourShapeExtractor.cpp  ContourShapeExtractor.h
sources/DESCRIPTORS/SHAPE/RegionShape/: RegionShape.cpp  RegionShape.h  RegionShapeDistance.cpp  RegionShapeDistance.h  RegionShapeExtractor.cpp  RegionShapeExtractor.h
sources/DESCRIPTORS/TEXTURE/EdgeHistogram/: EdgeHistogram.cpp  EdgeHistogram.h  EdgeHistogramDistance.cpp  EdgeHistogramDistance.h  EdgeHistogramExtractor.cpp  EdgeHistogramExtractor.h
sources/DESCRIPTORS/TEXTURE/HomogeneusTexture/: HomogeneousTexture.cpp  HomogeneousTexture.h  HomogeneousTextureDistance.cpp  HomogeneousTextureDistance.h  HomogeneousTextureExtractor.cpp  HomogeneousTextureExtractor.h
sources/DESCRIPTORS/TEXTURE/TextureBrowsing/: TextureBrowsing.cpp  TextureBrowsing.h  TextureBrowsingDistance.cpp  TextureBrowsingDistance.h  TextureBrowsingExtractor.cpp  TextureBrowsingExtractor.h
sources/JNI/: com_mpeg7_bridge_libmpeg7.cpp  com_mpeg7_bridge_libmpeg7.h  com_ztv_mpeg7_libmpeg7pw.cpp  com_ztv_mpeg7_libmpeg7pw.h
sources/TOOLS/: ErrorCode.h
sources/TOOLS/Image/: Image.cpp  Image.h  stb_image.h
sources/TOOLS/XML/: tinyxml2.cpp  tinyxml2.h
(+10 files in other folders)
